# Vibe-City

./: .gitignore  CLAUDE.md  README.md  Scenario.md  index.html
.github/workflows/: build-windows.yml  release.yml
css/: ui.css
docs/: itch-page-copy.md  itch-page-description.html  scenario-mode-rework-prompt.md
docs/cities/: Heathstead_Jun2020.json  Hillvale_Dec2025.json  Ironport_Apr1921.json
icons/: README.md  icon.icns
js/: assets.js  config.js  export_assets.js  input.js  main.js  renderer.js  scenario.js  simulation.js  state.js  terrain.js  ui.js
js/scenarios/: blueprints.js  requirements.js
scripts/: build-itch.mjs  generate_icons.sh  sync-tauri-dist.sh
scripts/gen-assets/: gen-commercial.mjs  gen-industrial.mjs  gen-residential.mjs  gen-scenario.mjs
scripts/gen-assets/lib/: theme-engine.mjs
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/src/: main.rs
